--- a/index.qmd
+++ b/index.qmd
@@ -1,8 +1,8 @@
 ---
 title: "Welcome to ML Paper Study"
+listing:
+  contents: posts
+  type: default
+  categories: true
+  sort: "date desc"
 ---
-
-이 블로그는 머신러닝/딥러닝 논문을 읽고 정리한 내용을 기록합니다.
-
-최근 포스트:
-- [첫 번째 포스트](posts/2025-08-08-first-post.qmd)
